--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
 }
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -58,6 +58,7 @@ dependencies {
     //Motion Layout
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
     implementation "com.google.android.material:material:$materialVersion"
-
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.2.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 }
